src/snapshots/afrotd__parser__tests__interpretation_html_4.1.4_2.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 4.1.4.II
        </p>
    </div>
    <div class="message-body">
        <p>
            Kicker A1 führt den Kickoff durch, bevor der Ball vom Referee
            freigegeben wurde.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Dead Ball Foul. Strafe – 5 Meter vom Succeeding Spot. Der Ball
                wird nicht zum Live Ball und alle Aktionen sollen sofort von
                den Schiedsrichtern unterbunden werden.
            </p>
        </details>
    </div>
</article>
