src/snapshots/afrotd__parser__tests__interpretation_html_4.2.1_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 4.2.1.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Team A führt von der A-35 einen Onside Kick durch. A33 läuft in der
            Nähe der Seitenlinie und tritt an der A-45 ins Aus. An der A47
            springt er und schlägt den Ball vorwärts. Dieser rollt an der A-49
            ins Aus.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A Foul für einen Free Kick im Aus an der A-47. Der in der
                Luft befindliche A33 befindet sich im Aus, als er den Ball
                berührte, da er sich nicht wieder inbounds etabliert hatte,
                nachdem er ins Aus ging. Kein Foul für das Nach-vorne-Schlagen
                eines freien Balles, da der Ball dead wird, sobald A33 ihn
                berührt (Regel 4.2.3.a).
            </p>
        </details>
    </div>
</article>
