src/snapshots/afrotd__parser__tests__interpretation_html_4.2.4_1.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 4.2.4.I
        </p>
    </div>
    <div class="message-body">
        <p>
            Ein Spieler, der sich mit einem Fuß hinter einer Goalline im Aus
            befindet, berührt einen freien Ball im Spielfeld.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Der Ball ist dead und befindet sich im Aus an seinem vordersten
                Punkt im Spielfeld. Wenn dieser freie Ball ein unberührter Free
                Kick war, so ist das ein Free Kick im Aus und ein Foul. Strafe
                – 5 Meter vom Previous Spot oder Team B’s Ball 30 Meter
                jenseits Team A’s Free Kick-Linie.
            </p>
        </details>
    </div>
</article>
