src/snapshots/afrotd__parser__tests__interpretation_html_5.1.3_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 5.1.3.III
        </p>
    </div>
    <div class="message-body">
        <p>
            A2, der sich in der Luft befindet, erreicht an der A-35 einen
            legalen Vorwärtspass. Als A2 den Ball erreicht, wird er von B1
            berührt und kommt zuerst an der A-33 mit dem Ball in seinen Händen
            auf dem Boden auf, wo der Ball für dead erklärt wird.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Team A’s Ball an der A-35. Das ist der Punkt des Forward
                Progress.
            </p>
        </details>
    </div>
</article>
