src/snapshots/afrotd__parser__tests__interpretation_html_5.1.3_5.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 5.1.3.V
        </p>
    </div>
    <div class="message-body">
        <p>
            A6 hat den Ball in seinem Besitz und hechtet ohne gegnerischen
            Kontakt über die 50-Meterlinie, die die Line to Gain für einen
            First Down ist, und wird dann hinter die 50-Meterlinie
            zurückgedrängt. A6 läuft selbständig weiter und wird an der A-49
            getackelt, wo ein Körperteil, außer Hand oder Fuß, den Boden
            berührt.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                Kein First Down. Der Punkt des Forward Progress ist die A-49.
            </p>
        </details>
    </div>
</article>
