src/snapshots/afrotd__parser__tests__interpretation_html_5.2.7_3.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 5.2.7.III
        </p>
    </div>
    <div class="message-body">
        <p>
            Beim 4. und 5 erzielt Team A sechs Meter Raumgewinn und bekommt
            eine neue Serie zuerkannt. Nachdem der Ball spielbereit ist und vor
            dem Snap begeht A55 (a) ein persönliches Foul oder (b) einen
            Fehlstart.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                (a) 1. und 25. (b) 1. und 15.
            </p>
        </details>
    </div>
</article>
