src/snapshots/afrotd__parser__tests__interpretation_html_5.2.7_6.snap
---
source: src/parser.rs
expression: interpretation_html
snapshot_kind: text
---
<article class="message is-size-5 is-info">
    <div class="message-header">
        <p>
            A.R. 5.2.7.VI
        </p>
    </div>
    <div class="message-body">
        <p>
            Ballträger A22 wird an der B-5 von B44 hart getackelt. Daraus
            resultiert ein 1. und Goal an der B-5. Nachdem der Ball dead wurde,
            schlug A22 B44 gegen den Helm.
        </p>
        <details>
            <summary>
                <b>Regelung</b>
            </summary>
            <p>
                15-Meterstrafe gegen Team A; A22 wird disqualifiziert. Nach der
                Strafdurchführung ist es A’s Ball, 1. und 10 von der B-20.
            </p>
        </details>
    </div>
</article>
